--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "client",
   "version": "1.0.0",
   "scripts": {
-    "start": "serve -s build",  
-    "dev": "vite"               
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"            
   },
   "dependencies": {
     "react": "^18.2.0",
